# metacity

./: .gitignore  .gitlab-ci.yml  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  TODO.matching  autogen.sh  configure.ac  configure.in  metacity.doap  rationales.txt
data/: Makefile.am
data/applications/: Makefile.am  metacity.desktop.in
data/keybindings/: 50-metacity-navigation.xml  50-metacity-system.xml  50-metacity-windows.xml  Makefile.am  keybindings.its  keybindings.pot
data/pkgconfig/: Makefile.am  libmetacity.pc.in
data/schemas/: Makefile.am  org.gnome.metacity.gschema.xml  org.gnome.metacity.keybindings.gschema.xml  org.gnome.metacity.theme.gschema.xml
data/systemd/: Makefile.am  metacity.service.in
data/ui/: Makefile.am  delete-dialog.ui  session-dialog.ui  theme-viewer-window.ui
dialog/: Makefile.am  meta-delete-dialog.c  meta-delete-dialog.h  meta-dialog-main.c  meta-dialog.gresource.xml  meta-session-dialog.c  meta-session-dialog.h
doc/: Makefile.am  code-overview.txt  compositor-control.txt  theme-format.txt
doc/cowbell/: cowbell.docbook.xml
doc/creating_themes/: Makefile.am
doc/creating_themes/C/: index.docbook
doc/creating_themes/de/: de.po
doc/man/: Makefile.am  metacity-message.1  metacity-theme-viewer.1  metacity.1
libmetacity/: Makefile.am  meta-button-enums.h  meta-button-function.c  meta-button-function.h  meta-button-layout-private.h  meta-button-layout.c  meta-button-layout.h  meta-button-private.h  meta-button-type-private.h  meta-button.c  meta-button.h  meta-color-private.h  meta-color-spec-private.h  meta-color-spec.c  meta-color-spec.h  meta-color.c  meta-color.h  meta-css-provider-private.h  meta-css-provider.c  meta-draw-op-private.h  meta-draw-op.c  meta-draw-op.h  meta-draw-spec-private.h  meta-draw-spec.c  meta-draw-spec.h  meta-enum-types.c.in  meta-frame-borders.c  meta-frame-borders.h  meta-frame-enums.h  meta-frame-flags.h  meta-frame-layout-private.h  meta-frame-layout.c  meta-frame-layout.h  meta-frame-style-private.h  meta-frame-style.c  meta-frame-style.h  meta-frame-type.h  meta-gradient-private.h  meta-gradient-spec-private.h  meta-gradient-spec.c  (+21 more)
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  (+54 more)
src/: 50-metacity-desktop-key.xml.in  50-metacity-key.xml.in  50-metacity-launchers.xml.in  50-metacity-navigation.xml.in  50-metacity-screenshot.xml.in  50-metacity-system.xml.in  50-metacity-windows.xml.in  Makefile.am  common.h  compositor.c  compositor.h  constraints.c  constraints.h  core.c  core.h  cwindow.c  cwindow.h  delete.c  devices.c  devices.h  display.c  display.h  edge-resistance.c  edge-resistance.h  effects.c  errors.c  frame.c  frame.h  frames.c  frames.h  iconcache.c  iconcache.h  keybindings.c  keybindings.h  libmetacity-private.pc.in  lmcbits.c  lmcbits.h  lmctexture.c  lmctexture.h  lmctypes.h  (+33 more)
src/compositor/: compositor-none.c  compositor-private.h  compositor-xrender.c  compositor-xrender.h  compositor.c  meta-compositor-external.c  meta-compositor-external.h  meta-compositor-none.c  meta-compositor-none.h  meta-compositor-private.h  meta-compositor-vulkan.c  meta-compositor-vulkan.h  meta-compositor-xpresent.c  meta-compositor-xpresent.h  meta-compositor-xrender.c  meta-compositor-xrender.h  meta-compositor.c  meta-shadow-xrender.c  meta-shadow-xrender.h  meta-surface-private.h  meta-surface-vulkan.c  meta-surface-vulkan.h  meta-surface-xrender.c  meta-surface-xrender.h  meta-surface.c  meta-surface.h
src/core/: above-tab-keycode.c  async-getprop.c  atomnames.h  bell.c  bell.h  boxes.c  compositor.c  constraints.c  constraints.h  core.c  delete.c  display-private.h  display.c  edge-resistance.c  edge-resistance.h  effects.c  effects.h  errors.c  eventqueue.c  eventqueue.h  frame-private.h  frame.c  group-private.h  group-props.h  group.c  group.h  iconcache.c  iconcache.h  keybindings.c  keybindings.h  main.c  matching.c  matching.h  meta-enum-types.c.in  meta-enum-types.h.in  metacity-Xatomtype.h  place.c  place.h  prefs.c  screen-private.h  (+18 more)
src/include/: all-keybindings.h  boxes.h  common.h  compositor.h  core.h  display.h  errors.h  frame.h  main.h  meta-compositor.h  prefs.h  resizepopup.h  screen.h  tabpopup.h  tile-preview.h  types.h  ui.h  util.h  window.h  xprops.h
src/themes/: Makefile.am
src/themes/Bright/: metacity-theme-2.xml
src/themes/Crux/: metacity-theme-2.xml
src/themes/Sunshine/: Sunshine.css
src/tools/: Makefile.am  metacity-grayscale.c  metacity-mag.c  metacity-message.c  metacity-window-demo.c
src/ui/: draw-workspace.c  draw-workspace.h  fixedtip.c  fixedtip.h  frames.c  frames.h  gradient.c  gradient.h  matching.c  matching.h  menu.c  menu.h  meta-request-csd.c  meta-request-csd.h  meta-tooltip.c  meta-tooltip.h  metaaccellabel.c  metaaccellabel.h  preview-widget.c  preview-widget.h  resizepopup.c  rpn.c  rpn.h  select-image.c  select-image.h  select-workspace.c  select-workspace.h  tabpopup.c  testgradient.c  theme-parser.c  theme-parser.h  theme-private.h  theme-viewer.c  theme.c  theme.h  themewidget.c  themewidget.h  tile-preview.c  ui-private.h  ui.c
src/wm-tester/: Makefile.am  main.c
test/: Makefile.am  basic-test.py  metacity-test
test/tokentest/: tokentest.c
test/veracity/: Makefile.am  TODO  veracity.c
test/veracity/unit/: reparent.js  reparent.scm
theme-viewer/: Makefile.am  theme-viewer-main.c  theme-viewer-window.c  theme-viewer-window.h  theme-viewer.gresource.xml
tools/: mannequin.py  ppa-magic.py  release-wrangler.py
