### This part of Makefile.am can be customized by you.

@YELP_HELP_RULES@

# The name of the directory in /usr/share/gnome/help/, 
# and the name of the main .xml file:
HELP_ID = creating-metacity-themes

HELP_FILES = index.docbook

# The names of any locales for which documentation translations exist:
HELP_LINGUAS = de


-include $(top_srcdir)/git.mk
