if BUILD_TESTS

@INTLTOOL_DESKTOP_RULE@
dfdfdf

#INCLUDES=@METACITY_WINDOW_DEMO_CFLAGS@ @METACITY_MESSAGE_CFLAGS@ \
#	-DMETACITY_ICON_DIR=\"$(pkgdatadir)/icons\" \
#	-DMETACITY_LOCALEDIR=\"$(prefix)/@DATADIRNAME@/locale\"

veracity_SOURCES= 				\
	veracity.c

## don't install the test suite
#noinst_PROGRAMS=veracity

veracity_LDADD= @METACITY_LIBS@

endif

